--- a/firebase-cms/projects/manage/src/app/articles/articles.component.html
+++ b/firebase-cms/projects/manage/src/app/articles/articles.component.html
@@ -1,4 +1,5 @@
 <app-article-edit [inputValues]="selectedArticle"></app-article-edit>
+<app-deploy-button></app-deploy-button>
 <h1>記事一覧</h1>
 <table>
   <tr *ngFor="let article of articles$ | async; index as i" (click)="onSelectArticle(article)">
